[gd_scene load_steps=23 format=3 uid="uid://b3ym0qjuv0cdl"]

[ext_resource type="Script" path="res://scenes/Levels/level_2_1/level_2_1.gd" id="1_vcq4f"]
[ext_resource type="PackedScene" uid="uid://ddl86hga7ktsa" path="res://objects/Laser/laser.tscn" id="3_c5rxn"]
[ext_resource type="PackedScene" uid="uid://cuu7y6g7d73p8" path="res://objects/Spawner/spawner.tscn" id="3_f7pbu"]
[ext_resource type="PackedScene" uid="uid://d1e0ugdqkbr86" path="res://objects/Flag/flag.tscn" id="4_gfyos"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_xoxe2"]
diffuse_mode = 3
specular_mode = 1
albedo_color = Color(0.818065, 0.715887, 0.901108, 1)
roughness = 0.02

[sub_resource type="BoxMesh" id="BoxMesh_mb3uk"]
material = SubResource("StandardMaterial3D_xoxe2")
size = Vector3(12, 1, 3)

[sub_resource type="BoxShape3D" id="BoxShape3D_28s2r"]
size = Vector3(12, 1, 3)

[sub_resource type="BoxMesh" id="BoxMesh_8fid2"]
material = SubResource("StandardMaterial3D_xoxe2")
size = Vector3(10, 1, 3)

[sub_resource type="BoxShape3D" id="BoxShape3D_q4ani"]
size = Vector3(10, 1, 3)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_etdt2"]
diffuse_mode = 3
specular_mode = 1
albedo_color = Color(0.818065, 0.715887, 0.901108, 1)
roughness = 0.02

[sub_resource type="BoxMesh" id="BoxMesh_05400"]
material = SubResource("StandardMaterial3D_etdt2")
size = Vector3(3, 20, 3)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_xidp2"]
data = PackedVector3Array(-1.5, 10, 1.5, 1.5, 10, 1.5, -1.5, -10, 1.5, 1.5, 10, 1.5, 1.5, -10, 1.5, -1.5, -10, 1.5, 1.5, 10, -1.5, -1.5, 10, -1.5, 1.5, -10, -1.5, -1.5, 10, -1.5, -1.5, -10, -1.5, 1.5, -10, -1.5, 1.5, 10, 1.5, 1.5, 10, -1.5, 1.5, -10, 1.5, 1.5, 10, -1.5, 1.5, -10, -1.5, 1.5, -10, 1.5, -1.5, 10, -1.5, -1.5, 10, 1.5, -1.5, -10, -1.5, -1.5, 10, 1.5, -1.5, -10, 1.5, -1.5, -10, -1.5, 1.5, 10, 1.5, -1.5, 10, 1.5, 1.5, 10, -1.5, -1.5, 10, 1.5, -1.5, 10, -1.5, 1.5, 10, -1.5, -1.5, -10, 1.5, 1.5, -10, 1.5, -1.5, -10, -1.5, 1.5, -10, 1.5, 1.5, -10, -1.5, -1.5, -10, -1.5)

[sub_resource type="BoxMesh" id="BoxMesh_5b4x1"]
material = SubResource("StandardMaterial3D_xoxe2")
size = Vector3(3, 1, 3)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_iioyl"]
data = PackedVector3Array(-1.5, 0.5, 1.5, 1.5, 0.5, 1.5, -1.5, -0.5, 1.5, 1.5, 0.5, 1.5, 1.5, -0.5, 1.5, -1.5, -0.5, 1.5, 1.5, 0.5, -1.5, -1.5, 0.5, -1.5, 1.5, -0.5, -1.5, -1.5, 0.5, -1.5, -1.5, -0.5, -1.5, 1.5, -0.5, -1.5, 1.5, 0.5, 1.5, 1.5, 0.5, -1.5, 1.5, -0.5, 1.5, 1.5, 0.5, -1.5, 1.5, -0.5, -1.5, 1.5, -0.5, 1.5, -1.5, 0.5, -1.5, -1.5, 0.5, 1.5, -1.5, -0.5, -1.5, -1.5, 0.5, 1.5, -1.5, -0.5, 1.5, -1.5, -0.5, -1.5, 1.5, 0.5, 1.5, -1.5, 0.5, 1.5, 1.5, 0.5, -1.5, -1.5, 0.5, 1.5, -1.5, 0.5, -1.5, 1.5, 0.5, -1.5, -1.5, -0.5, 1.5, 1.5, -0.5, 1.5, -1.5, -0.5, -1.5, 1.5, -0.5, 1.5, 1.5, -0.5, -1.5, -1.5, -0.5, -1.5)

[sub_resource type="BoxMesh" id="BoxMesh_irquc"]
size = Vector3(1, 10, 3)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_c10sf"]
data = PackedVector3Array(-0.5, 5, 1.5, 0.5, 5, 1.5, -0.5, -5, 1.5, 0.5, 5, 1.5, 0.5, -5, 1.5, -0.5, -5, 1.5, 0.5, 5, -1.5, -0.5, 5, -1.5, 0.5, -5, -1.5, -0.5, 5, -1.5, -0.5, -5, -1.5, 0.5, -5, -1.5, 0.5, 5, 1.5, 0.5, 5, -1.5, 0.5, -5, 1.5, 0.5, 5, -1.5, 0.5, -5, -1.5, 0.5, -5, 1.5, -0.5, 5, -1.5, -0.5, 5, 1.5, -0.5, -5, -1.5, -0.5, 5, 1.5, -0.5, -5, 1.5, -0.5, -5, -1.5, 0.5, 5, 1.5, -0.5, 5, 1.5, 0.5, 5, -1.5, -0.5, 5, 1.5, -0.5, 5, -1.5, 0.5, 5, -1.5, -0.5, -5, 1.5, 0.5, -5, 1.5, -0.5, -5, -1.5, 0.5, -5, 1.5, 0.5, -5, -1.5, -0.5, -5, -1.5)

[sub_resource type="BoxMesh" id="BoxMesh_5abr3"]
material = SubResource("StandardMaterial3D_xoxe2")
size = Vector3(3, 1, 3)

[sub_resource type="BoxShape3D" id="BoxShape3D_dxpca"]
size = Vector3(3, 1, 3)

[sub_resource type="BoxShape3D" id="BoxShape3D_o4w5c"]
size = Vector3(3, 1, 3)

[sub_resource type="BoxMesh" id="BoxMesh_7jfwc"]
material = SubResource("StandardMaterial3D_xoxe2")
size = Vector3(3, 0.5, 3)

[sub_resource type="BoxShape3D" id="BoxShape3D_10tbs"]
size = Vector3(3, 0.5, 3)

[sub_resource type="BoxShape3D" id="BoxShape3D_d8qx0"]
size = Vector3(3, 1, 3)

[node name="Level 2-1" type="Node3D"]
script = ExtResource("1_vcq4f")

[node name="Platform" type="MeshInstance3D" parent="."]
transform = Transform3D(1, -9.47561e-05, 0.000127197, 9.47623e-05, 1, -4.84132e-05, -0.000127192, 4.84252e-05, 1, -11.514, 0.5, 0)
mesh = SubResource("BoxMesh_mb3uk")
skeleton = NodePath("../../../..")

[node name="StaticBody3D" type="StaticBody3D" parent="Platform"]
transform = Transform3D(1, 3.41771e-12, 0, 1.0707e-11, 1, 0, 0, 0, 1, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Platform/StaticBody3D"]
shape = SubResource("BoxShape3D_28s2r")

[node name="Platform2" type="MeshInstance3D" parent="."]
transform = Transform3D(1, -9.47561e-05, 0.000127197, 9.47623e-05, 1, -4.84132e-05, -0.000127192, 4.84252e-05, 1, -12.5, 6.5, 0)
mesh = SubResource("BoxMesh_8fid2")
skeleton = NodePath("../../../..")

[node name="StaticBody3D" type="StaticBody3D" parent="Platform2"]
transform = Transform3D(1, 3.41771e-12, 0, 1.0707e-11, 1, 0, 0, 0, 1, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Platform2/StaticBody3D"]
transform = Transform3D(1, 3.41771e-12, 0, -2.51227e-10, 1, 0, 0, 0, 1, 0, 0, 0)
shape = SubResource("BoxShape3D_q4ani")

[node name="Platform5" type="MeshInstance3D" parent="."]
transform = Transform3D(1, -9.47561e-05, 0.000127197, 9.47623e-05, 1, -4.84132e-05, -0.000127192, 4.84252e-05, 1, -2.5, 6.5, 0)
mesh = SubResource("BoxMesh_8fid2")
skeleton = NodePath("../../../..")

[node name="StaticBody3D" type="StaticBody3D" parent="Platform5"]
transform = Transform3D(1, 3.41771e-12, 0, 1.0707e-11, 1, 0, 0, 0, 1, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Platform5/StaticBody3D"]
transform = Transform3D(1, 3.41771e-12, 0, -2.51227e-10, 1, 0, 0, 0, 1, 0, 0, 0)
shape = SubResource("BoxShape3D_q4ani")

[node name="Platform8" type="MeshInstance3D" parent="."]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 3, 2, 0)
mesh = SubResource("BoxMesh_8fid2")
skeleton = NodePath("../../../..")

[node name="StaticBody3D" type="StaticBody3D" parent="Platform8"]
transform = Transform3D(1, 3.41771e-12, 0, 1.0707e-11, 1, 0, 0, 0, 1, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Platform8/StaticBody3D"]
transform = Transform3D(1, 3.41771e-12, 0, -2.51227e-10, 1, 0, 0, 0, 1, 0, 0, 0)
shape = SubResource("BoxShape3D_q4ani")

[node name="Platform3" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -19, 4.006, 0)
mesh = SubResource("BoxMesh_05400")

[node name="StaticBody3D" type="StaticBody3D" parent="Platform3"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Platform3/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_xidp2")

[node name="Platform4" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 12, 6.5, 0)
mesh = SubResource("BoxMesh_5b4x1")
skeleton = NodePath("../Platform")

[node name="StaticBody3D" type="StaticBody3D" parent="Platform4"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Platform4/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_iioyl")

[node name="Flag" parent="Platform4" instance=ExtResource("4_gfyos")]
transform = Transform3D(1, 0.000189527, -0.000144131, -0.000189519, 1, 5.48818e-05, 0.00014414, -5.48545e-05, 1, -0.195686, 1.5014, -0.768833)

[node name="Blue Spawner" parent="." instance=ExtResource("3_f7pbu")]
transform = Transform3D(1, -9.47561e-05, 0.000127197, 9.47622e-05, 1, -4.84132e-05, -0.000127192, 4.84252e-05, 1, -16.0276, 8.26146, -0.996074)
cube_type = 1

[node name="Red Spawner" parent="." instance=ExtResource("3_f7pbu")]
transform = Transform3D(1, -9.47561e-05, 0.000127197, 9.47622e-05, 1, -4.84132e-05, -0.000127192, 4.84252e-05, 1, -16, 2.122, -1)

[node name="GrayGate" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8.5, 12, 0)
mesh = SubResource("BoxMesh_irquc")

[node name="StaticBody3D" type="StaticBody3D" parent="GrayGate"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="GrayGate/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_c10sf")

[node name="Laser2" parent="GrayGate" instance=ExtResource("3_c5rxn")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.77354, 1.46307, 0.487302)
skeleton = NodePath("../..")
laser_id = 3

[node name="Laser3" parent="GrayGate" instance=ExtResource("3_c5rxn")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.774, -1.47763, 0.487)
skeleton = NodePath("../..")
laser_id = 1

[node name="Laser" parent="." instance=ExtResource("3_c5rxn")]
transform = Transform3D(1, 0.000127197, 9.4756e-05, 9.47622e-05, -4.84569e-05, -1, -0.000127192, 1, -4.84689e-05, -8.28544, 5.75037, 0.484496)

[node name="Laser2" parent="." instance=ExtResource("3_c5rxn")]
transform = Transform3D(1.91069e-15, -4.37114e-08, -1, -1, -4.37114e-08, 0, -4.37114e-08, 1, -4.37114e-08, -4.37535, -4.05182, 0.484496)
laser_id = 2

[node name="Platform6" type="MeshInstance3D" parent="."]
transform = Transform3D(1, -9.47561e-05, 0.000127197, 9.47623e-05, 1, -4.84132e-05, -0.000127192, 4.84252e-05, 1, 1, -2.5, 0)
mesh = SubResource("BoxMesh_5abr3")
skeleton = NodePath("../../../..")

[node name="StaticBody3D" type="StaticBody3D" parent="Platform6"]
transform = Transform3D(1, 3.41771e-12, 0, 1.0707e-11, 1, 0, 0, 0, 1, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Platform6/StaticBody3D"]
transform = Transform3D(1, 3.41771e-12, 0, -2.51227e-10, 1, 0, 0, 0, 1, 0, 0, 0)
shape = SubResource("BoxShape3D_dxpca")

[node name="Platform10" type="MeshInstance3D" parent="."]
transform = Transform3D(1, -9.47561e-05, 0.000127197, 9.47623e-05, 1, -4.84132e-05, -0.000127192, 4.84252e-05, 1, -2.15, 6.5, 0)
mesh = SubResource("BoxMesh_5abr3")
skeleton = NodePath("../../../..")

[node name="StaticBody3D" type="StaticBody3D" parent="Platform10"]
transform = Transform3D(1, 3.41771e-12, 0, 1.0707e-11, 1, 0, 0, 0, 1, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Platform10/StaticBody3D"]
transform = Transform3D(1, 3.41771e-12, 0, -2.51227e-10, 1, 0, 0, 0, 1, 0, 0, 0)
shape = SubResource("BoxShape3D_o4w5c")

[node name="Platform9" type="MeshInstance3D" parent="Platform10"]
transform = Transform3D(1, 3.41771e-12, 0, -3.84492e-12, 1, 0, 0, 0, 1, -0.841632, -0.237168, -9.55641e-05)
mesh = SubResource("BoxMesh_7jfwc")
skeleton = NodePath("../../../../..")

[node name="StaticBody3D" type="StaticBody3D" parent="Platform10/Platform9"]
transform = Transform3D(1, 3.41771e-12, 0, 1.0707e-11, 1, 0, 0, 0, 1, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Platform10/Platform9/StaticBody3D"]
transform = Transform3D(1, 3.41771e-12, 0, -2.51227e-10, 1, 0, 0, 0, 1, 0, 0, 0)
shape = SubResource("BoxShape3D_10tbs")

[node name="Platform7" type="MeshInstance3D" parent="."]
transform = Transform3D(1, -9.47561e-05, 0.000127197, 9.47623e-05, 1, -4.84132e-05, -0.000127192, 4.84252e-05, 1, -4.05755, 0.5, 0)
mesh = SubResource("BoxMesh_5abr3")
skeleton = NodePath("../../../..")

[node name="StaticBody3D" type="StaticBody3D" parent="Platform7"]
transform = Transform3D(1, 3.41771e-12, 0, 1.0707e-11, 1, 0, 0, 0, 1, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Platform7/StaticBody3D"]
transform = Transform3D(1, 3.41771e-12, 0, -2.51227e-10, 1, 0, 0, 0, 1, 0, 0, 0)
shape = SubResource("BoxShape3D_d8qx0")

[node name="Label3D" type="Label3D" parent="."]
transform = Transform3D(8, 0, 0, 0, 8, 0, 0, 0, 8, -16.2416, 15.1191, -1.2)
text = "Level 2-1: Split Focus

"

[connection signal="laser_blocked" from="GrayGate/Laser2" to="." method="_on_laser_blocked"]
[connection signal="laser_not_blocked" from="GrayGate/Laser2" to="." method="_on_laser_not_blocked"]
[connection signal="laser_blocked" from="GrayGate/Laser3" to="." method="_on_laser_blocked"]
[connection signal="laser_not_blocked" from="GrayGate/Laser3" to="." method="_on_laser_not_blocked"]
[connection signal="laser_blocked" from="Laser" to="." method="_on_laser_blocked"]
[connection signal="laser_not_blocked" from="Laser" to="." method="_on_laser_not_blocked"]
[connection signal="laser_blocked" from="Laser2" to="." method="_on_laser_blocked"]
[connection signal="laser_not_blocked" from="Laser2" to="." method="_on_laser_not_blocked"]
